cabal-version: >=1.10
name:          tls-debug
version:       0.4.8
license:       BSD3
license-file:  LICENSE
copyright:     Vincent Hanquez <vincent@snarc.org>
maintainer:    Vincent Hanquez <vincent@snarc.org>
author:        Vincent Hanquez <vincent@snarc.org>
stability:     experimental
homepage:      http://github.com/vincenthz/hs-tls
synopsis:      Set of programs for TLS testing and debugging
description:
    A set of program to test and debug various aspect of the TLS package.
    .

category:      Network
build-type:    Simple

source-repository head
    type:     git
    location: https://github.com/vincenthz/hs-tls

executable tls-stunnel
    main-is:          Stunnel.hs
    hs-source-dirs:   src
    other-modules:
        Common
        Imports

    default-language: Haskell2010
    ghc-options:      -Wall -fno-warn-missing-signatures
    build-depends:
        base >=4 && <5,
        network,
        bytestring,
        crypton-x509-store >=1.9.0,
        crypton-x509-system >=1.9.0,
        crypton-x509-validation >=1.9.0,
        data-default,
        crypton >=1.1.0,
        tls >=2.3.0,
        tls-session-manager >= 0.1.0

    if os(windows)
        buildable: False

    else

executable tls-retrievecertificate
    main-is:          RetrieveCertificate.hs
    hs-source-dirs:   src
    other-modules:    Imports
    default-language: Haskell2010
    ghc-options:      -Wall -fno-warn-missing-signatures
    build-depends:
        base >=4 && <5,
        network,
        bytestring,
        crypton-pem,
        crypton-x509 >=1.9.0,
        crypton-x509-system >=1.9.0,
        crypton-x509-validation >=1.9.0,
        data-default,
        tls >=2.3.0

executable tls-simpleclient
    main-is:          SimpleClient.hs
    hs-source-dirs:   src
    other-modules:
        Common
        HexDump
        Imports

    default-language: Haskell2010
    ghc-options:      -Wall -fno-warn-missing-signatures
    build-depends:
        base >=4 && <5,
        network,
        bytestring,
        data-default,
        crypton >=1.1.0,
        crypton-x509-store >=1.9.0,
        crypton-x509-system >=1.9.0,
        tls >=2.3.0

executable tls-simpleserver
    main-is:          SimpleServer.hs
    hs-source-dirs:   src
    other-modules:
        Common
        HexDump
        Imports

    default-language: Haskell2010
    ghc-options:      -Wall -fno-warn-missing-signatures
    build-depends:
        base >=4 && <5,
        network,
        bytestring,
        data-default,
        crypton >=1.1.0,
        crypton-x509-store >=1.9.0,
        crypton-x509-system >=1.9.0,
        tls >=2.3.0,
        tls-session-manager >=0.1.0
