cabal-version:      >=1.10
name:               ech-config
version:            0.0.0
license:            BSD3
license-file:       LICENSE
maintainer:         kazu@iij.ad.jp
author:             Kazu Yamamoto
synopsis:           Config for TLS Encrypted Client Hello
description:
    Config yypes for TLS Encrypted Client Hello to glue DNS and TLS

category:           Web
build-type:         Simple
extra-source-files: ChangeLog.md

library
    exposed-modules:  Network.TLS.ECH.Config
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4.7 && <5,
        base16-bytestring,
        bytestring

    default-extensions: Strict StrictData
