cabal-version:      >=1.10
name:               ech-config
version:            0.0.1
license:            BSD3
license-file:       LICENSE
maintainer:         kazu@iij.ad.jp
author:             Kazu Yamamoto
synopsis:           Config for TLS Encrypted Client Hello
description:
    Config types for TLS Encrypted Client Hello to glue DNS and TLS

category:           Network
build-type:         Simple
extra-source-files: ChangeLog.md

flag devel
    description: Development commands
    default:     False

library
    exposed-modules:    Network.TLS.ECH.Config
    default-language:   Haskell2010
    default-extensions: Strict StrictData
    ghc-options:        -Wall
    build-depends:
        base >=4.7 && <5,
        base16-bytestring,
        bytestring,
        filepath,
        network-byte-order

executable ech-gen
    main-is:            ech-gen.hs
    hs-source-dirs:     util
    default-language:   Haskell2010
    default-extensions: Strict StrictData
    ghc-options:        -Wall -threaded -rtsopts
    build-depends:
        base >=4.9 && <5,
        bytestring,
        base64-bytestring,
        ech-config,
        hpke

    if flag(devel)

    else
        buildable: False

source-repository head
    type:     git
    location: https://github.com/haskell-tls/hs-tls
    subdir:   tls
