Name:                tls-extra
Version:             0.6.0
Description:
   a set of extra definitions, default values and helpers for tls.
License:             BSD3
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snarc.org>
Author:              Vincent Hanquez <vincent@snarc.org>
Maintainer:          Vincent Hanquez <vincent@snarc.org>
Synopsis:            TLS extra default values and helpers
Build-Type:          Simple
Category:            Network
stability:           experimental
Cabal-Version:       >=1.6
Homepage:            http://github.com/vincenthz/hs-tls

Flag test
  Description:       Build unit test
  Default:           False

Flag fastaes
  Description:       Use fast AES if available
  Default:           True

Library
  Build-Depends:     base > 3 && < 5
                   , tls >= 1.1.0 && < 1.2.0
                   , mtl
                   , network >= 2.3
                   , cryptohash >= 0.6
                   , bytestring
                   , vector
                   , cipher-rc4
                   , cipher-aes >= 0.1 && < 0.2
                   , certificate >= 1.3.0 && < 1.4.0
                   , crypto-pubkey
                   , crypto-random-api
                   , pem >= 0.1.0 && < 0.2.0
                   , text >= 0.5 && < 1.0
                   , time
  Exposed-modules:   Network.TLS.Extra
  other-modules:     Network.TLS.Extra.Certificate
                     Network.TLS.Extra.Cipher
                     Network.TLS.Extra.Compression
                     Network.TLS.Extra.Connection
                     Network.TLS.Extra.Thread
                     Network.TLS.Extra.File
  ghc-options:       -Wall -fno-warn-missing-signatures
  if os(windows)
    cpp-options:     -DNOCERTVERIFY

executable           Tests
  Main-is:           Tests.hs
  if flag(test)
    Buildable:       True
    Build-Depends:   base >= 3 && < 5
                   , HUnit
                   , QuickCheck >= 2
                   , bytestring
                   , cprng-aes >= 0.3.0
  else
    Buildable:       False
  if os(windows)
    cpp-options:     -DNOCERTVERIFY
  if flag(fastaes)
    cpp-options:     -DCIPHER_AES
    Build-Depends:   cipher-aes >= 0.1 && < 0.2

source-repository head
  type: git
  location: git://github.com/vincenthz/hs-tls
