cabal-version:      >=1.10
name:               tls-session-manager
version:            0.0.4
license:            BSD3
license-file:       LICENSE
maintainer:         kazu@iij.ad.jp
author:             Kazu Yamamoto
synopsis:           In-memory TLS session manager
description:
    TLS session manager with limitation, automatic pruning, energy saving and replay resistance

category:           Web
build-type:         Simple
extra-source-files: ChangeLog.md

library
    exposed-modules:  Network.TLS.SessionManager
    other-modules:    Network.TLS.Imports
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4.7 && <5,
        auto-update,
        basement,
        bytestring,
        clock,
        memory,
        psqueues >=0.2.3,
        tls

    if impl(ghc >=8)
        default-extensions: Strict StrictData
