cabal-version:      >=1.10
name:               tls-session-manager
version:            0.0.6
license:            BSD3
license-file:       LICENSE
maintainer:         kazu@iij.ad.jp
author:             Kazu Yamamoto
synopsis:           In-memory TLS session DB and session ticket
description:
    TLS session manager with limitation, automatic pruning, energy saving and replay resistance and session ticket manager

category:           Web
build-type:         Simple
extra-source-files: ChangeLog.md

library
    exposed-modules:  Network.TLS.SessionManager
                      Network.TLS.SessionTicket
    other-modules:    Network.TLS.Imports
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4.7 && <5,
        auto-update >= 0.1 && < 0.3,
        basement >= 0.0.16 && < 0.1,
        bytestring >= 0.10 && < 0.13,
        clock >= 0.8 && < 0.9,
        crypto-token >= 0.1.1 && < 0.2,
        memory >= 0.18.0 && < 0.19,
        psqueues >= 0.2 && < 0.3,
        serialise >= 0.2 && < 0.3,
        tls >= 2.0 && < 2.2

    if impl(ghc >=8)
        default-extensions: Strict StrictData
